<resources>
    <string name="app_name">Islamic App</string>
    <string name="rules_amp_methods"><![CDATA[RULES & METHODS]]></string>
    <string name="txtwh">
        <br>Wudu is required before praying salah. The steps must be completed in the given
order below, and they must be done without long pauses between each of the steps.

</br>
    </string>
    <string name="txtghusl">
        <br>Muslim adults perform an ablution, called ghusl, prior to rituals and prayers. This full-body ritual (compared to the partial-body ritual, wudu) is required for men and women in order to be considered pure in body after certain acts. In the ghusl ritual, the entire body must be washed and rubbed clean in order to remove impurities from the body.
</br>
    </string>
    <string name="ghusl_step1">
     <n><br><b>  Steps:- </b></br></n>
       <b> <br>1.</br></b><br> Form the intention to purify yourself in your heart.\nThis can be done by simply thinking to yourself that you’re performing this ritual for the pleasure of Allah. This does not need to be stated out loud; just thinking it to yourself is fine.</br>
                                            \n•	There is no set way to do this “properly.” Just keep your religious intentions in mind in order to satisfy this requirement.
    </string>
    <string name="ghusl_step2">
         <b> <br>2.</br></b> <br> Go to a private area to perform the ritual, if you can. \nIt’s considered sinful in Islam to expose the lower half of your body to other people. The easiest way to do this is to simply perform the ritual in your private bathroom with the door closed and locked.</br>
                                            \n• The exception to this rule is that you’re allowed to expose yourself to your marital spouse.
    </string>
    <string name="ghusl_step3"><b> <br>3.</br></b> <br>Find a source of clean water you can use. \nIn addition to an ordinary shower or bath, this source can also include rain, well, spring, sea, river snowmelt, or pond water. However, avoid using impure water or water that has already been used for something else.</br>
                                             \n•  Note that discolored water or water that may contain bodily fluids from animals or humans cannot be used for the ghusl ritual.
                                             \n•  Make sure to use safe water to perform this ritual, especially if you’re in an area where the sanitation of the local water supply is in question.
                                             \n•  Use clean earth and rub it over your face and hands if you are traveling and can’t find a source of clean water. This is known as tayammum. Afterwards, perform ghusl with water as soon as you find a water source.

    </string>
    <string name="ghusl_step4"><b> <br>4.</br></b> <br>Say “bismillah” out loud to invoke the name of Allah. \nThis is a verbal cue that you’re performing ghusl for the pleasure of Allah. This is also a reminder to yourself that this is an important religious ritual and not just a bath.</br>
                                             \n•  You can also say the longer phrase, Bismillahir-Rahmanir-Raheem, if you wish. This means "In the name of Allah, the most gracious, the most merciful."
    </string>
    <string name="ghusl_step5"><b> <br>5.</br></b> <br>	Wash your hands up to and including your wrists first. \nWash your right hand thoroughly, making sure to wash and rub in between each of the fingers. Do this 3 times, then wash your left hand 3 times in the same fashion.</br>
                                             \n•  Just like with regular ablution, you should remove nail polish before performing this ritual. Men and women must also remove anything that may prevent water from washing the skin, such as jewelry.
    </string>
    <string name="ghusl_step6"><b> <br>6.</br></b> <br>Move on to washing your private parts and any contaminated areas. \nRemove all traces of semen or vaginal discharge on your private parts with water. If these fluids are on any other parts of your body, such as your hands, wash these as well.</br>
                                            \n•	Be sure to do this 3 times to fully purify yourself.

    </string>
    <string name="ghusl_step7"><b> <br>7.</br></b> <br> Douse your head, face, and neck with water 3 times. \nBe sure to wash your head deeply enough that the water reaches all the way down to the skin on your scalp. If you have a beard or other facial hair, wash underneath this area as well. Do not leave any dry areas on your head.</br>
                                            \n•	If you have a beard, take a handful of water below your chin and rub it through your beard to wash it.
                                            \n•	Be sure to wash your ears as part of your head. However, you do not have to wash the inside of your ears during this process.
    </string>
    <string name="ghusl_step8"><b> <br>8.</br></b> <br> Wash the entire right side of your body next, from shoulder to foot. \nUse your left hand to rub the water all over the right side of your body, taking care not to leave any area unwashed. Make sure you include your back, thighs, legs, feet, and private parts in the washing.</br>
                                            \n•	If you’re using a cup or bucket to pour water over yourself, you may need to pour a liberal amount of water on your body to make sure you wash all of it.
    </string>
    <string name="ghusl_step9"><b> <br>9.</br></b> <br>	Repeat this process on the left side of your body. \nWash the left side of your body from your shoulders all the way down to your feet. Once again, make sure you’ve washed every part of your body during this process.</br>
                                            \n•	Be aware that missing a single part of your body makes the ritual null. It should be performed in detail with the intention in your heart to become clean.
                                            \n•	Note that there isn’t scholarly consensus regarding the order in which the ghusl is performed. While most scholars argue that the right side of the body should be washed first, some also claim that the entire body should be washed after the head and face.
    </string>
    <string name="ghusl_step10"><b> <br>11.</br></b> <br>Dry yourself off with a clean towel, if desired, and get dressed. \nYou’re not obligated to dry off after finishing the ghusl. However, if you do choose to dry your body with a towel, make sure the towel is completely clean. Otherwise, you’ll have to restart the whole process! </br>
    </string>
    <string name="ghusl_step11"><b> <br>1.</br></b> <br> Consider performing ghusl in situations where it’s merely preferred. \nThere are some situations where ghusl is not strictly required, but is generally recommended. Some situations where ghusl is recommended include:</br>
                                            \n•	When a non-Muslim has converted to Islam.
                                            \n•    Before commencing Friday prayers.
                                            \n•    Before commencing Eid prayers.
                                            \n•    After washing a corpse.
                                            \n•    Before undertaking a pilgrimage to Mecca.
    </string>
    <string name="ghusl_step12"><b> <br>2.</br></b> <br> Remember that ghusl is required after the end of menstrual bleeding. \nDo this as soon as possible after your menstruation stops, preferably before your next prayer. If you see recurrent spotting or bleeding, perform ghusl again to purify yourself after the bleeding stops again.</br>
                                            \n•  This also extends to bleeding after childbirth. If there’s no bleeding afterwards, ghusl should be performed on the 40th day after childbirth.
    </string>
    <string name="ghusl_step13"><b> <br>3.</br></b> <br> Wash any Muslim who has died by natural causes as soon as possible. \nThis can be done as part of the funeral rituals for the deceased and should be performed as soon as possible after death. Typically, adult members of the deceased’s family will perform the required ghusl.</br>
                                            \n•  Note that there is an exception for those who die in battle, who should not be washed in a ghusl ritual.
    </string>
    <string name="ghusl_step14"><b> <br>4.</br></b> <br> Note that ghusl is required after an instance of pleasurable ejaculation. \nThis includes ejaculation after sexual intercourse or accidental ejaculation as a result of a wet dream. If semen is released without any accompanying pleasure, however, you don’t have to perform ghusl in that instance.</br>
                                            \n•  For example, if a person’s body emits semen as a result of sickness, then that person does not have to perform ghusl.
                                            \n•  Note that ghusl is not required for merely discharging madhiy (urethral fluid), which sometimes seeps out after thinking of or desiring intercourse.
                                            \n•  If you’ve had sexual intercourse without ejaculation, you will also need to perform ghusl in this instance.
    </string>
    <string name="d2d_dua1">\nبِسْمِ اللهِ الرَّحْمَنِ الرَّحِيْم\nِ
        \nTransliteration – “Bismil laahir Rahmaanir Raheem\n\nTranslation – “Al’laah’s Name we begin with, The Compassionate, Most Merciful.”</string>
    <string name="d2d_dua2">\nاَلْحَمْدُ للهِ الَّذِىْ اَطْعَمَنَا وَسَقَاناَ وَجَعَلَناَ مِنَ الْمُسْلِمِيْنَ\nِ
        \nTransliteration – “Alhumdu lil laahil Lazee At’amana Wa Saqaana Wa Ja’alana Minal Muslimeen”.\n\nTranslation – “All Praise is due to Al’laah, who has blessed us with food and drink and made us from amongst the Believers (Muslims)”.</string>
    <string name="d2d_dua3">\nاللّهُـمَّ افْتَـحْ لي أَبْوابَ رَحْمَتـِك\nِ
        \nTransliteration – “Allaahum-maf-Tahlee Abwaaba Rahmatika”.\n\nTranslation – “O Allaah, open the doors of Your Mercy for me.” </string>
    <string name="d2d_dua4">\nاللّهُـمَّ إِنّـي أَسْأَلُكَ مِـنْ فَضْـلِك\nِ
        \nTransliteration – “Allaahum-ma In-nee As`aluka Min Fadhlika”.\n\nTranslation – “O Allaah, I seek of You Your Grace.” </string>
    <string name="d2d_dua5">\nالْحَمْدُ لِلَّ\nِ
        \nTransliteration – “Alhamdulillah”!\n\nTranslation – “Thanks and all praise be to Allah”
                            \nيَرْحَمُكَ اللَّهُ\nِ
        \nTransliteration – “Yar Hamoo kall Lah”.\n\nTranslation – “May Allah have mercy on you.”</string>
    <string name="d2d_dua6">\nبِسْـمِ اللهِ وَلَجْنـا، وَبِسْـمِ اللهِ خَـرَجْنـا، وَعَلـى رَبِّنـا تَوَكّلْـنا\nِ
        \nTransliteration – “Bismillaahi walajnaa, wa bismillaahi kharajnaa, wa ‘alaaRabblnaa tawakkalnaa”\n\nTranslation – “In the Name of Allah we enter, in the Name of Allah we leave, and upon our Lord we depend [then say As-Salaamu ‘Alaykum to those present]."</string>
    <string name="d2d_dua7">\بِسْمِ اللهِ تَوَكَّلْتُ عَلىَ اللهِ وَلاَ حَوْلَ وَلاَ قُوَّةَ اِلاَّ بِاللهِ ط\nِ
        \nTransliteration – “Bismil laahi Tawak’kaltu Alal laahi Wa Laa Hawla Wa Laa Quw’wata il’la bil’laah“\n\nTranslation – “Al’laah’s Name we begin with, I place my (full) trust in Al’laah and there is no Might and Power except with Al’laah.”</string>
    <string name="d2d_dua8">\nسُبْحَنَ الَّذِىْ سَخَّرَلَنَا هَذَا وَ مَا كُنَّا لَهُ مُقْرِنِيْنْ وَ اِنَّا اِلَى رَبِّنَا لَمُنْقَلِبُوْنْ\nِ
        \nTransliteration –“Subhaanal lazee Sakh’khara Lana Haaza Wa Maa Kun’na Lahu Muqrineen. Wa In’na ilaa Rab’bina La Munqaliboon”.\n\nTranslation –  “Glory be to Al’laah who has given us control over this (mode of transport) and without his Grace we would not have been able to control it and undoubtedly we are to return towards our Lord.”</string>
</resources>