<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.pyaraislam.islamicapp.dua.daytoday">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:id="@+id/d2d_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Day To Day Dua"
        android:layout_margin="16dp"
        android:fontFamily="@font/ubuntu"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
    </TextView>



    <androidx.cardview.widget.CardView
        android:id="@+id/d2d_cv1"
        android:onClick="expand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:contentPadding="20dp">


    <LinearLayout
        android:id="@+id/d2d_layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:text="Before Meal"
            android:fontFamily="@font/ubuntu"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlue2"/>
        <TextView
            android:id="@+id/d2d_details1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/changa_bold"
            android:visibility="gone"
            android:text="@string/d2d_dua1"
            android:textSize="18sp"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/d2d_cv2"
        android:onClick="expand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:contentPadding="20dp">


        <LinearLayout
            android:id="@+id/d2d_layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:text="After Meal"
                android:fontFamily="@font/ubuntu"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlue2"/>
            <TextView
                android:id="@+id/d2d_details2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/changa_bold"
                android:visibility="gone"
                android:text="@string/d2d_dua2"
                android:textSize="18sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/d2d_cv3"
        android:onClick="expand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:contentPadding="20dp">


        <LinearLayout
            android:id="@+id/d2d_layout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:text="Entering Masjid"
                android:textColor="@color/colorBlue2"
                android:textSize="21sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/d2d_details3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/changa_bold"
                android:visibility="gone"
                android:text="@string/d2d_dua3"
                android:textSize="18sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/d2d_cv4"
        android:onClick="expand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:contentPadding="20dp">


        <LinearLayout
            android:id="@+id/d2d_layout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:text="Exiting Masjid"
                android:textColor="@color/colorBlue2"
                android:textSize="21sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/d2d_details4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/changa_bold"
                android:visibility="gone"
                android:text="@string/d2d_dua4"
                android:textSize="18sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/d2d_cv5"
        android:onClick="expand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:contentPadding="20dp">


        <LinearLayout
            android:id="@+id/d2d_layout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:text="When Sneezing"
                android:textColor="@color/colorBlue2"
                android:textSize="21sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/d2d_details5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/changa_bold"
                android:visibility="gone"
                android:text="@string/d2d_dua5"
                android:textSize="18sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/d2d_cv6"
        android:onClick="expand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:contentPadding="20dp">


        <LinearLayout
            android:id="@+id/d2d_layout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:text="Entering Home"
                android:textColor="@color/colorBlue2"
                android:textSize="21sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/d2d_details6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/changa_bold"
                android:visibility="gone"
                android:text="@string/d2d_dua6"
                android:textSize="18sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/d2d_cv7"
        android:onClick="expand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:contentPadding="20dp">


        <LinearLayout
            android:id="@+id/d2d_layout7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:text="Leaving Home"
                android:textColor="@color/colorBlue2"
                android:textSize="21sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/d2d_details7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/changa_bold"
                android:visibility="gone"
                android:text="@string/d2d_dua7"
                android:textSize="18sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>




        <androidx.cardview.widget.CardView
            android:id="@+id/d2d_cv8"
            android:onClick="expand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp">


            <LinearLayout
                android:id="@+id/d2d_layout8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="173dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu"
                    android:text="While Traveling"
                    android:textColor="@color/colorBlue2"
                    android:textSize="21sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/d2d_details8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/changa_bold"
                    android:visibility="gone"
                    android:text="@string/d2d_dua8"
                    android:textSize="18sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>




</ScrollView>